Mon Apr 24 12:02:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/ORB.cpp:
          Added include of ObjectIdListC.h to resolve compile errors related
          to this type with Sun Studio 10

Mon Apr 24 11:56:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        Reverted change below, set method is IDL generated.

        Mon Apr 24 09:39:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>
        * orbsvcs/orbsvcs/Runtime_Scheduler.{h,cpp}:
          Made the arguments of the set method a const reference, this fixes
          the internal backend errors in the BCB2006 release builds.

Mon Apr 24 11:31:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/ORB_Core.cpp:
          When we can't get a valuetype adapter throw an internal corba
          exception

        * TAO_IDL/be/be_codegen.cpp:
          Updated include generated for the valuetype library, makes sure
          that the valuetype library gets linked into the executable when
          building static.

Mon Apr 24 10:16:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_1676_Regression/*:
          Added regression for bug 1676 written by Kees van Marle. This bug
          seems not to be fixed yet.

Mon Apr 24 09:39:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/Runtime_Scheduler.{h,cpp}:
          Made the arguments of the set method a const reference, this fixes
          the internal backend errors in the BCB2006 release builds.

Mon Apr 24 06:59:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/FaultTolerance/FT_ServerPolicy_i.inl:
          Removed some left over ACE_NESTED_CLASS usage

Sun Apr 23 11:26:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/IFRService/IFR_ComponentsS.cpp:
          Removed some left over ACE_NESTED_CLASS usage

Fri Apr 21 20:43:24 UTC 2006  J.T. Conklin  <jtc@acorntoolworks.com>
